--- a/config
+++ b/config
@@ -2,5 +2,6 @@
 FILES_TO_LINK=" \
     check_video_length.sh \
     fix_fiducia_csv.py \
-    maildir_trash.sh"
+    maildir_trash.sh \
+    start_firefox_cleanprofile.py "
 
