--- a/config
+++ b/config
@@ -3,5 +3,6 @@ FILES_TO_LINK=" \
     check_video_length.sh \
     fix_fiducia_csv.py \
     maildir_trash.sh \
-    start_firefox_cleanprofile.py "
+    start_firefox_cleanprofile.py \
+    syncthing_rescan.py "
 
