--- a/config
+++ b/config
@@ -4,5 +4,6 @@ FILES_TO_LINK=" \
     fix_fiducia_csv.py \
     maildir_trash.sh \
     start_firefox_cleanprofile.py \
+    syncthing_findconflicts.py \
     syncthing_rescan.py "
 
