--- a/config
+++ b/config
@@ -1,6 +1,7 @@
 # Config-File, sourced by install-script
 FILES_TO_LINK=" \
     check_video_length.sh \
+    copy_duplicity_backups.py \
     fix_fiducia_csv.py \
     maildir_trash.sh \
     start_firefox_cleanprofile.py \
