--- a/config
+++ b/config
@@ -5,6 +5,7 @@ FILES_TO_LINK=" \
     fix_fiducia_csv.py \
     maildir_trash.sh \
     start_firefox_cleanprofile.py \
+    start-ssh-agent.sh \
     syncthing_findconflicts.py \
     syncthing_rescan.py "
 
