--- a/config
+++ b/config
@@ -7,6 +7,8 @@ FILES_TO_LINK=" \
     gnucash_import.py \
     maildir_trash.sh \
     msmtpq_notify.py \
+    mutt_flagged_vfolder_jump.py \
+    mutt_flagged_vfolder_link.py \
     start_firefox_cleanprofile.py \
     start-ssh-agent.sh \
     symlink_picture_list.py \
