--- a/config
+++ b/config
@@ -9,6 +9,7 @@ FILES_TO_LINK=" \
     msmtpq_notify.py \
     mutt_flagged_vfolder_jump.py \
     mutt_flagged_vfolder_link.py \
+    offlineimap_refresh.sh \
     start_firefox_cleanprofile.py \
     start-ssh-agent.sh \
     symlink_picture_list.py \
