--- a/config
+++ b/config
@@ -2,6 +2,8 @@
 FILES_TO_LINK=" \
     check_video_length.sh \
     copy_duplicity_backups.py \
+    encryptfolder.sh \
+    export_encrypted_borgbackup.sh \
     fix_fiducia_csv.py \
     get_clip_list.py \
     gnucash_accounts.py \
