fix_comdirect_csv: Prepare for second format
The CSV format for VISA card is different, prepare format detection and support
for other formats.

--- a/config
+++ b/config
@@ -4,6 +4,7 @@ FILES_TO_LINK=" \
     copy_duplicity_backups.py \
     encryptfolder.sh \
     export_encrypted_borgbackup.sh \
+    fix_comdirect_csv.py \
     fix_fiducia_csv.py \
     get_clip_list.py \
     gnucash_accounts.py \
