--- a/config
+++ b/config
@@ -19,6 +19,7 @@ FILES_TO_LINK=" \
     start_firefox_cleanprofile.py \
     start-ssh-agent.sh \
     symlink_picture_list.py \
+    sendmail_wrapper.py \
     syncthing_findconflicts.py \
     syncthing_rescan.py "
 
